--- a/LIBERO/requirements.txt
+++ b/LIBERO/requirements.txt
@@ -4,10 +4,11 @@
  easydict==1.9 
  transformers==4.21.1
  opencv-python==4.6.0.66 
- robomimic==0.2.0 
- einops==0.4.1
- thop==0.1.1-2209072238
+ # robomimic==0.2.0 
+ einops==0.8.1
+ # thop==0.1.1-2209072238
  robosuite==1.4.0
+ termcolor==2.5.0
  bddl==1.0.1
  future==0.18.2 
  matplotlib==3.5.3 
